--- a/style.css
+++ b/style.css
@@ -1,23 +1,23 @@
 @font-face {
     font-family: 'open_sansextrabold';
-    src: url('fonts/opensans-extrabold-webfont.woff2') format('woff2'),
-         url('fonts/opensans-extrabold-webfont.woff') format('woff');
+    src: url(fonts/opensans-extrabold-webfont.woff2) format('woff2'),
+         url(fonts/opensans-extrabold-webfont.woff) format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'source_sans_probold_italic';
-    src: url('fonts/sourcesanspro-bolditalic-webfont.woff2') format('woff2'),
-         url('fonts/sourcesanspro-bolditalic-webfont.woff') format('woff');
+    src: url(fonts/sourcesanspro-bolditalic-webfont.woff2) format('woff2'),
+         url(fonts/sourcesanspro-bolditalic-webfont.woff) format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'source_sans_prosemibold';
-    src: url('fonts/sourcesanspro-semibold-webfont.woff2') format('woff2'),
-         url('fonts/sourcesanspro-semibold-webfont.woff') format('woff');
+    src: url(fonts/sourcesanspro-semibold-webfont.woff2) format('woff2'),
+         url(fonts/sourcesanspro-semibold-webfont.woff) format('woff');
     font-weight: normal;
     font-style: normal;
 }
