--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
          url(fonts/opensans_condensed-extrabold-webfont.woff2) format('woff2'),
          url(fonts/opensans_condensed-extrabold-webfont.woff) format('woff');
     font-weight:normal;
-    font-style:italic;
+    font-style:normal;
 }
 
 @font-face {
@@ -13,7 +13,7 @@
          url(fonts/sourcesanspro-regular-webfont.woff) format('woff2'),
          url(fonts/sourcesanspro-regular-webfont.woff2) format('woff');
     font-weight:normal;
-    font-style:italic;
+    font-style:normal;
 }
 
 @font-face {
@@ -22,7 +22,7 @@
          url(fonts/sourcesanspro-semibold-webfont.woff2) format('woff2'),
          url(fonts/sourcesanspro-semibolditalic-webfont.woff) format('woff');
     font-weight:normal;
-    font-style:italic;
+    font-style:normal;
 }
 
 /* Main BG */
