--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@
 }
 
 #fruit-bowl-main-section-1-p1{
-    font-family:'Source Sans Pro SemiBold';
+    font-family:'Source Sans Pro';
     font-size:1.3em;
     position: static;
     margin-left:1060px;
@@ -273,7 +273,7 @@
 }
 
 #fruit-bowl-main-section-2-p1{
-    font-family:'Source Sans Pro SemiBold';
+    font-family:'Source Sans Pro';
     font-size:1.3em;
     position: static;
     margin:0;
@@ -286,7 +286,7 @@
 }
 
 #fruit-bowl-main-section-2-p2{
-    font-family:'Source Sans Pro SemiBold';
+    font-family:'Source Sans Pro';
     font-size:1.3em;
     position: static;
     margin:0;
