--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@
 #title{
     font-family:'Open Sans Condensed';
     font-size:8.5em;
-    font-style:italic;
+    font-style:oblique;
     width:fit-content;
     line-height: 175px;
     margin-left:185px;
