--- a/style.css
+++ b/style.css
@@ -323,6 +323,7 @@
     font-size:5.3em;
     color:white;
     width:652px;
+    text-align:center;
     margin-bottom:0px;
     margin-top:30px;
     margin-left:35px;
